# ragnar

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
src/: lib.rs  main.rs  prompt.rs  proxy.rs  rag.rs
src/rag/: database.rs  embed.rs  prompt.rs
