[package]
name = "ragnar"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
arrow-array = "58.3.0"
arrow-schema = "58.3.0"
axum = "0.8.9"
futures = "0.3.32"
http-body-util = "0.1.3"
lancedb = "0.29.0"
reqwest = { version = "0.13.3", features = ["stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
toml = "1.1.2"
